Rename main window title from 'Duftuban' to 'Inventario'

--- a/views/mainwindow.ui
+++ b/views/mainwindow.ui
@@ -23,7 +23,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Duftuban</string>
+   <string>Inventario</string>
   </property>
   <property name="windowIcon">
    <iconset>
